#LBP-320 fix vertical spacing

--- a/style/output.css
+++ b/style/output.css
@@ -1717,10 +1717,6 @@ span .MathJax_SVG{
   height: 0.1rem;
 }
 
-.first\:mt-4:first-child {
-  margin-top: 1rem;
-}
-
 .hover\:border-b-0:hover {
   border-bottom-width: 0px;
 }
